argocd/web-bff-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-bff-service
spec:
  type: ClusterIP
  selector:
    app: web-bff-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
